<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gnews_background" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/gnews_logo_home"/>

    <TextView
        android:id="@+id/text_top"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/channel_text_top"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/question"
        android:layout_below="@+id/text_top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/channel_name"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/channel_name"
        android:layout_below="@id/question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/channel_name_hint"
        android:inputType="textAutoComplete"
        />

    <TextView
        android:id="@+id/question2"
        android:layout_below="@+id/channel_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/channel_description"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/channel_desc"
        android:layout_below="@id/question2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:inputType="textAutoComplete"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/default_button_selector"
        android:text="@string/next"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/default_button_selector"
        android:text="@string/back"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />

</RelativeLayout>