<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gnews_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/gnews_logo_home"/>

    <TextView
        android:layout_above="@+id/basic_info_box"
        android:gravity="center"
        android:textAlignment="gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/basic_info"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/basic_info_box"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <TextView
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/email"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/password"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/country"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            />

        <Spinner
            android:id="@+id/country"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/countries"
            android:prompt="@string/country"
            android:spinnerMode="dialog"
            />

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/default_button_selector"
        android:text="@string/next"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />

</RelativeLayout>